# memoryallocator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  test.yml
cmake/: customallocConfig.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp
include/customalloc/: CustomAlloc.h  custom_alloc.h  custom_alloc_internal.h
src/: CustomAlloc.cpp  custom_alloc.cpp  custom_alloc_core.cpp  custom_alloc_debug.cpp  custom_alloc_small.cpp  custom_alloc_stats.cpp  custom_alloc_util.cpp
tests/: CMakeLists.txt  enhanced_test.cpp  integrity_verification_test.cpp  simple_test.cpp  test_allocator.cpp  threadsafe_test.cpp  zero_on_free_test.cpp
